2004-04-16  David Schleef  <ds@schleef.org>

	* common/m4/gst-arch.m4:  Implmenent a whitelist and blacklist
	for GST_UNALIGNED_ACESS, since we essentially know which archs
	are ok.

2004-04-17  Benjamin Otte  <otte@gnome.org>

	* docs/gst/Makefile.am:
	  ignore gst/parse directory when building docs (fixes #140205)

2004-04-16  Thomas Vander Stichele  <thomas at apestaart dot org>

	* testsuite/refcounting/mem.c: (vmsize):
          do error checking

2004-04-16  Johan Dahlin  <johan@gnome.org>

	* docs/gst/gstreamer-sections.txt: Add gst_pad_call_chain_function
	and gst_pad_call_get_function.

2004-04-15  David Schleef  <ds@schleef.org>

	* common/m4/gst-arch.m4: Add GST_UNALIGNED_ACCESS() macro that
	checks if we can access unaligned memory.
	* configure.ac: Use it.

2004-04-16  Benjamin Otte  <otte@gnome.org>

	* gst/elements/gstfilesrc.c: (gst_filesrc_init), (gst_filesrc_get),
	(gst_filesrc_change_state), (gst_filesrc_srcpad_event):
	* gst/elements/gstfilesrc.h:
	  s/seek_happened/need_discont/ and require discont before sending any
	  data

2004-04-15  David Schleef  <ds@schleef.org>

	* gst/gstvalue.c: (gst_value_serialize_buffer),
	(gst_value_deserialize_buffer), (_gst_value_initialize):
	Register these types as fundamental types. (bug #140015)

2004-04-16  Benjamin Otte  <otte@gnome.org>

	* gst/gstpad.c: (gst_pad_set_active), (gst_pad_link_new),
	(gst_pad_link_free), (gst_pad_link_try), (_invent_event),
	(gst_pad_pull):
	  implement enforcing discont events before buffers are passed. This
	  allows state changes of only some elements and later correctly going
	  on where they left off (or in short: you can now set audio sinks to
	  NULL to release the device when the pipeline is paused)
	* gst/gstpad.c: (gst_pad_call_chain_function),
	(gst_pad_call_get_function):
	* gst/gstpad.h:
	  add gst_pad_call_chain_function and gst_pad_call_get_function for
	  scheduler interaction. They are required because of the changes
	  above.